# ai_shopping

./: .env.example  .gitignore  Makefile  README.md  compose.yml  payjp-setup.sh
app/: Dockerfile  app.py  assistant.py  draw_graph.py  handler.py  models.py  pyproject.toml  tools.py  workflows.py
chroma/: Dockerfile  initialize_collection.py  pyproject.toml
chroma/data/: items.csv
