[project]
name = "ai_shopping_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=1.3.2",
    "chromadb>=0.5.20",
    "langchain-openai>=0.2.9",
    "langchain>=0.3.7",
    "langgraph>=0.2.53",
    "payjp>=0.5.0",
    "pydantic>=2.10.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
